STAR-09-Add Footer to Project

--- a/index.html
+++ b/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="assets/scss/main.min.css">
-  <title>Ice cream</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IceCream</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Footer -->
+    <footer class="footer container">
+      <div class="footer__buttons">
+        <button class="footer_buttons--left">Our Locations ></button>
+        <button class="footer_buttons--right">Franchise ></button>
+      </div>
+      <section class="footer__middle">
+        <div class="footer__title">
+          <p class="footer__title--top">HOMEMADE ICE CREAM MADE</p>
+          <p class="footer__title--bottom">WITH PASSION</p>
+        </div>
+
+        <div class="footer__contacts">
+          <ul class="footer__iconlist">
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="34" height="34">
+                  <use href="images/icons.svg#icon-github"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="34" height="34">
+                  <use href="images/icons.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="34" height="34">
+                  <use href="images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <ul class="footer__number">
+            <p class="footer__contacts--text">Feel free to contact</p>
+            <p class="footer__contacts--number">+61 (0) 383 766 284</p>
+          </ul>
+        </div>
+      </section>
+      <div>
+        <div class="footer__line"></div>
+        <p class="footer__rights">© 2022 - IceCream. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
