--- a/index.html
+++ b/index.html
@@ -1,83 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ICE CREAM</title>
-  <link rel="stylesheet" href="./assets/css/main.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
-    rel="stylesheet">
-</head>
-
-<body>
-  <section class="section--about">
-    <div class="container">
-      <div class="div__about-up">
-        <p class="p--tittle">tradition and love</p>
-        <h2 class="h2--tittle">how it’s made?</h2>
-      </div>
-      <div class="div__about-down">
-        <div class="div__img">
-          <img class="img" src="assets/images/cow.png" alt="Cow">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ICE CREAM</title>
+    <link rel="stylesheet" href="./assets/css/main.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <section class="section--about">
+      <div class="container">
+        <div class="div__about-up">
+          <p class="p--tittle">tradition and love</p>
+          <h2 class="h2--tittle">how it’s made?</h2>
         </div>
-        <div class="div--text">
-          <p class="div__p--principal">Ice is a place where you will become not only a little happier, but also
-            healthier. Health is the main value for us, and we follow it when creating our handmade desserts.
-          </p>
-          <p class="div__p--secondary">We use traditional recipes and 100% natural ingredients. Our products are so
-            natural that they can be given to children from the age of three years. Sweets lovers can expect 55 types of
-            ice cream, 15 types of coffee and 23 milkshakes.
-          </p>
-          <button type="button" class="button--about">Read more >
-          </button>
+        <div class="div__about-down">
+          <div class="div__img">
+            <img class="img" src="assets/images/cow.png" alt="Cow" />
+          </div>
+          <div class="div--text">
+            <p class="div__p--principal">
+              Ice is a place where you will become not only a little happier,
+              but also healthier. Health is the main value for us, and we follow
+              it when creating our handmade desserts.
+            </p>
+            <p class="div__p--secondary">
+              We use traditional recipes and 100% natural ingredients. Our
+              products are so natural that they can be given to children from
+              the age of three years. Sweets lovers can expect 55 types of ice
+              cream, 15 types of coffee and 23 milkshakes.
+            </p>
+            <button type="button" class="button--about">Read more ></button>
+          </div>
         </div>
       </div>
+    </section>
+    <section class="section--advantages">
+      <div class="container">
+        <ul class="ul__section-advantages">
+          <li class="li--advantages">
+            <div class="div__advantages--svg">
+              <svg class="icon">
+                <use href="./assets/images/SVG/1.svg#761"></use>
+              </svg>
+            </div>
+            <p class="p--number-advantages">721</p>
+            <p class="p--advantages">
+              At 721 Cow, we're passionate about producing the highest quality
+              ice cream possible.
+            </p>
+          </li>
+          <li class="li--advantages">
+            <div class="div__advantages--svg">
+              <svg class="icon">
+                <!-- <use href="./images/SVG/sprite.svg#16kg"> -->
+                <use href="./assets/images/SVG/sprite.svg#16kg"></use>
+              </svg>
+            </div>
+            <p class="p--number-advantages">16kg</p>
+            <p class="p--advantages">
+              You can be sure you're getting a scoop of the freshest ice cream
+              around.
+            </p>
+          </li>
+          <li class="li--advantages">
+            <div class="div__advantages--svg">
+              <svg class="icon">
+                <use href="./images/SVG/sprite.svg#84"></use>
+              </svg>
+            </div>
+            <p class="p--number-advantages">84</p>
+            <p class="p--advantages">
+              We use only the freshest, locally-sourced ingredients to make our
+              84 unique and delicious flavors.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__buttons">
+        <button class="footer__buttons--left">Our Locations ></button>
+        <button class="footer__buttons--right">Franchise ></button>
+      </div>
+      <section class="footer__middle">
+        <div class="footer__title">
+          <p class="footer__title--top">HOMEMADE ICE CREAM MADE</p>
+          <p class="footer__title--bottom">WITH PASSION</p>
+        </div>
 
-    </div>
-  </section>
-  <section class="section--advantages">
-    <div class="container">
-      <ul class="ul__section-advantages">
-        <li class="li--advantages">
-          <div class="div__advantages--svg">
-            <svg class="icon">
-              <use href="./assets/images/SVG/1.svg#761">
-              </use>
-            </svg>
-          </div>
-          <p class="p--number-advantages">721</p>
-          <p class="p--advantages">At 721 Cow, we're passionate about producing the highest quality ice cream possible.
-          </p>
-        </li>
-        <li class="li--advantages">
-          <div class="div__advantages--svg">
-            <svg class="icon">
-              <!-- <use href="./images/SVG/sprite.svg#16kg"> -->
-              <use href="./assets/images/SVG/sprite.svg#16kg">
-              </use>
-            </svg>
-          </div>
-          <p class="p--number-advantages">16kg</p>
-          <p class="p--advantages">You can be sure you're getting a scoop of the freshest ice cream around.</p>
-        </li>
-        <li class="li--advantages">
-          <div class="div__advantages--svg">
-            <svg class="icon">
-              <use href="./images/SVG/sprite.svg#84">
-              </use>
-            </svg>
-          </div>
-          <p class="p--number-advantages">84</p>
-          <p class="p--advantages">We use only the freshest, locally-sourced ingredients to make our 84 unique and
-            delicious flavors.</p>
-        </li>
-      </ul>
-    </div>
-  </section>
-</body>
-
+        <div class="footer__contacts">
+          <ul class="footer__iconlist">
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="20" height="20">
+                  <use href="/assets/images/SVG/sprite.svg#icon-github"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="20" height="20">
+                  <use href="/assets/images/SVG/sprite.svg#icon-telegram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer__icon">
+              <a href="#">
+                <svg width="20" height="20">
+                  <use href="/assets/images/SVG/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+          <ul class="footer__number">
+            <p class="footer__contacts--text">Feel free to contact</p>
+            <p class="footer__contacts--number">+61 (0) 383 766 284</p>
+          </ul>
+        </div>
+      </section>
+      <div>
+        <div class="footer__line"></div>
+        <p class="footer__rights">© 2022 - IceCream. All Rights Reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
