Variables and icon-close added to project

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="modal">
             <button data-modal-close type="button" class="modal__btn">
               <svg class="modal__icon">
-                <use href="./assets/img/icons.svg#icon-close"></use>
+                <use href="./assets/images/icons.svg#icon-close"></use>
               </svg>
             </button>
             <p class="modal__title">We will be glad to see you</p>
@@ -226,7 +226,7 @@
           <div class="modal">
             <button data-form-close type="button" class="modal__btn">
               <svg class="modal__icon">
-                <use href="./assets/img/icons.svg#icon-close"></use>
+                <use href="./assets/images/icons.svg#icon-close"></use>
               </svg>
             </button>
             <p class="modal__title">
