commented footer buttons

--- a/index.html
+++ b/index.html
@@ -188,9 +188,18 @@
           </li>
         </ul>
 
+        <!-- Botones enlazados a los modales,  -->
         <ul class="contact__btn">
-          <li><button data-modal-open type="button">Our locations</button></li>
-          <li><button data-form-open type="button">Franchise</button></li>
+          <li>
+            <button data-modal-open class="footer__buttons--left" type="button">
+              Our locations
+            </button>
+          </li>
+          <li>
+            <button data-form-open class="footer__buttons--right" type="button">
+              Franchise
+            </button>
+          </li>
         </ul>
 
         <!-- Modal con mapa -->
@@ -259,10 +268,11 @@
     </section>
     <!-- Footer -->
     <footer class="footer">
-      <div class="footer__buttons">
+      <!-- Botones que van en la seccion contacts -->
+      <!-- <div class="footer__buttons">
         <button class="footer__buttons--left">Our Locations ></button>
         <button class="footer__buttons--right">Franchise ></button>
-      </div>
+      </div> -->
       <section class="footer__middle">
         <div class="footer__title">
           <p class="footer__title--top">HOMEMADE ICE CREAM MADE</p>
