STAR-00 fixing icons and deleting unused .svg files in about section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li class="li--advantages">
             <div class="div__advantages--svg">
               <svg class="icon">
-                <use href="./assets/images/SVG/1.svg#761"></use>
+                <use href="./assets/images/SVG/sprite.svg#761"></use>
               </svg>
             </div>
             <p class="p--number-advantages">721</p>
@@ -63,7 +63,6 @@
           <li class="li--advantages">
             <div class="div__advantages--svg">
               <svg class="icon">
-                <!-- <use href="./images/SVG/sprite.svg#16kg"> -->
                 <use href="./assets/images/SVG/sprite.svg#16kg"></use>
               </svg>
             </div>
@@ -75,9 +74,7 @@
           </li>
           <li class="li--advantages">
             <div class="div__advantages--svg">
-              <svg class="icon">
-                <use href="./images/SVG/sprite.svg#84"></use>
-              </svg>
+              <img src="assets/images/heart-image.png" alt="heart">
             </div>
             <p class="p--number-advantages">84</p>
             <p class="p--advantages">
