--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   </head>
   <body>
       
-    <header class="container-header">
+    <header class="container-header container">
+
       <div class="hero-header ">
 
         <div class="logo-header">
