STAR-011-responsive-about

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </section>
+
     <section class="section--advantages">
       <div class="container">
         <ul class="ul__section-advantages">
@@ -77,7 +78,7 @@
               <img src="assets/images/heart-image.png" alt="heart">
             </div>
             <p class="p--number-advantages">84</p>
-            <p class="p--advantages">
+            <p class="p--advantages exception">
               We use only the freshest, locally-sourced ingredients to make our
               84 unique and delicious flavors.
             </p>
@@ -85,6 +86,7 @@
         </ul>
       </div>
     </section>
+
     <section class="contact" id="contact">
       <div class="container">
         <ul class="contact__list">
@@ -263,6 +265,7 @@
         </div>
       </div>
     </section>
+
     <!-- Footer -->
     <footer class="footer">
       <!-- Botones que van en la seccion contacts -->
