--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" 
     <title>ICE CREAM</title>
     <link rel="stylesheet" href="./assets/css/main.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -86,6 +87,53 @@
         </ul>
       </div>
     </section>
+
+<section class="section">
+      <div class="container">
+        <input type="radio" name="slites" id="radio1" checked />
+        <input type="radio" name="slites" id="radio2" />
+        <input type="radio" name="slites" id="radio3" />
+
+        <ul class="slides">
+          <li class="slide">
+            <img src="/images/testimonials1 1.png" alt="" />
+            <p>
+              <span class="comillas">❞ </span>I love visiting your café. You
+              prepare the most delicious ice cream in Los Angeles! In addition,
+              you have beautiful serving, cozy atmosphere and polite staff.
+            </p>
+
+            <h2>Emily, Los Angeles</h2>
+          </li>
+          <li class="slide">
+            <img src="/images/testimonials1 3.png" alt="" />
+            <p>
+              <span class="comillas">❞ </span>I love visiting your café. You
+              prepare the most delicious ice cream in Los Angeles! In addition,
+              you have beautiful serving, cozy atmosphere and polite staff.
+            </p>
+            <h2>Mila, New York City</h2>
+          </li>
+          <li class="slide">
+            <img src="/images/testimonials1 4.png" alt="" />
+            <p>
+              <span class="comillas">❞ </span>I love visiting your café. You
+              prepare the most delicious ice cream in Los Angeles! In addition,
+              you have beautiful serving, cozy atmosphere and polite staff.
+            </p>
+
+            <h2>Agata, California</h2>
+          </li>
+        </ul>
+
+        <div class="navigation">
+          <label for="radio1" id="radioSelect1"></label>
+          <label for="radio2" id="radioSelect2"></label>
+          <label for="radio3" id="radioSelect3"></label>
+        </div>
+      </div>
+    </section>
+
 
     <section class="contact" id="contact">
       <div class="container">
