STAR-01-animacion-about

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </li>
           <li class="li--advantages">
             <div class="div__advantages--svg">
-              <img src="assets/images/heart-image.png" alt="heart">
+              <img class="icon" src="assets/images/heart-image.png" alt="heart">
             </div>
             <p class="p--number-advantages">84</p>
             <p class="p--advantages exception">
