STAR-07 adding code of reviews and fixing other issues

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
     rel="stylesheet" />
-    <script src="./assets/js/map-modal.js" defer></script>
-    <script src="./assets/js/form-modal.js" defer></script>
+  <script src="./assets/js/map-modal.js" defer></script>
+  <script src="./assets/js/form-modal.js" defer></script>
 </head>
 
 <body>
@@ -79,7 +79,6 @@
       </div>
     </div>
   </section>
-
   <section class="section--advantages">
     <div class="container">
       <ul class="ul__section-advantages">
@@ -119,6 +118,48 @@
           </p>
         </li>
       </ul>
+    </div>
+  </section>
+  <section class="section--reviews">
+    <div class="section--reviews__container">
+      <input type="radio" name="slites" id="radio1" checked />
+      <input type="radio" name="slites" id="radio2" />
+      <input type="radio" name="slites" id="radio3" />
+      <ul class="section--reviews__slides">
+        <li class="section--reviews__slide">
+          <img src="/images/testimonials1 1.png" alt="testimonial image 1" class="image-slide"/>
+          <p>
+            <span class="comillas">❞ </span>I love visiting your café. You
+            prepare the most delicious ice cream in Los Angeles! In addition,
+            you have beautiful serving, cozy atmosphere and polite staff.
+          </p>
+          <h2>Emily, Los Angeles</h2>
+        </li>
+        <li class="slide">
+          <img src="/images/testimonials1 3.png" alt="testimonial image 2" class="image-slide"/>
+          <p>
+            <span class="comillas">❞ </span>I love visiting your café. You
+            prepare the most delicious ice cream in Los Angeles! In addition,
+            you have beautiful serving, cozy atmosphere and polite staff.
+          </p>
+          <h2>Mila, New York City</h2>
+        </li>
+        <li class="slide">
+          <img src="/images/testimonials1 4.png" alt="testimonial image 3" class="image-slide"/>
+          <p>
+            <span class="comillas">❞ </span>I love visiting your café. You
+            prepare the most delicious ice cream in Los Angeles! In addition,
+            you have beautiful serving, cozy atmosphere and polite staff.
+          </p>
+
+          <h2>Agata, California</h2>
+        </li>
+      </ul>
+      <div class="navigation">
+        <label for="radio1" id="radioSelect1"></label>
+        <label for="radio2" id="radioSelect2"></label>
+        <label for="radio3" id="radioSelect3"></label>
+      </div>
     </div>
   </section>
   <section class="contact" id="contact">
