STAR-01 adding header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,90 @@
 </head>
 
 <body>
+  <header class="container-header container">
+    <div class="hero-header ">
+      <div class="logo-header">
+        <svg class="logo__svg">
+          <use href="./assets/images/icons.svg#icon-logo-completo"></use>
+        </svg>
+      </div>
+      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+        <svg class="svg_hamburger">
+          <use href="./assets/images/icons.svg#hamburger"></use>
+        </svg>
+      </button>
+      <nav class="navbar">
+        <ul class="navbar__menu">
+          <li class="navbar__list">
+            <a class="navbar__link" href="#">Home</a>
+          </li>
+          <li class="navbar__list">
+            <a class="navbar__link" href="#">About us</a>
+          </li>
+          <li class="navbar__list">
+            <a class="navbar__link" href="#">How it's made?</a>
+          </li>
+          <li class="navbar__list">
+            <a class="navbar__link" href="#">Our products</a>
+          </li>
+          <li class="navbar__list">
+            <a class="navbar__link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <button class="button button--buy">
+        <a class="button__link" href="#">Buy now ></a>
+      </button>
+    </div>
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg class="svg_close">
+          <use href="./assets/images/icons.svg#close"></use>
+        </svg>
+      </button>
+      <ul class="mobile-menu">
+        <li><a href="" class="link">Home</a></li>
+        <li><a href="" class="link">About us</a></li>
+        <li><a href="" class="link">How it's made?</a></li>
+        <li><a href="" class="link">Contact</a></li>
+      </ul>
+    </div>
+    <div class=hero-header-container>
+      <div class="hero-header-products">
+        <p class="hero-header-products__description">
+          ICE CREAM<br />MADE WITH<br /><span class="red">PASSION</span>
+        </p>
+        <button class="button button--product">
+          <a class="button__link" href="#">Products</a>
+        </button>
+        <button class="button button--how">
+          <a class="button__link" href="#">Hows it's made?</a>
+        </button>
+        <div class="hero-header-products__jar">
+          <img class="hero-header-products__img" src="./assets/images/jarra.png" alt="jarra" width="213">
+          <div>
+            <p class="hero-header-products__description2">Indulge in a scoop of ice cream made with passion and treat
+              your taste buds to an unforgettable experience!</p>
+            </li>
+            <img class="hero-header-products__flecha" src="./assets/images/arrow-right 3.png" alt="Flecha" width="26">
+          </div>
+        </div>
+      </div>
+      <div class="hero-header-images">
+        <div class="images-circle">
+          <img class="circulo" src="./assets/images/Ellipse.png" alt="circulo">
+          <div class="images-popsicle">
+            <img class="helado" src="./assets/images/helado.png" alt="helado">
+          </div>
+        </div>
+        <div class="images-girl">
+          <img class="dieciseis" src="./assets/images/icono16.png" alt="16">
+          <img class="veintitres" src="./assets/images/icono23.png" alt="23">
+          <img class="girl" src="./assets/images/mujer.png" alt="mujer">
+        </div>
+      </div>
+    </div>
+  </header>
   <section class="product" id="products">
     <div class="container">
       <h3 class="product__quality">100% NATURAL</h3>
@@ -127,7 +211,7 @@
       <input type="radio" name="slites" id="radio3" />
       <ul class="section--reviews__slides">
         <li class="section--reviews__slide">
-          <img src="/images/testimonials1 1.png" alt="testimonial image 1" class="image-slide"/>
+          <img src="/images/testimonials1 1.png" alt="testimonial image 1" class="image-slide" />
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
@@ -136,7 +220,7 @@
           <h2>Emily, Los Angeles</h2>
         </li>
         <li class="slide">
-          <img src="/images/testimonials1 3.png" alt="testimonial image 2" class="image-slide"/>
+          <img src="/images/testimonials1 3.png" alt="testimonial image 2" class="image-slide" />
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
@@ -145,7 +229,7 @@
           <h2>Mila, New York City</h2>
         </li>
         <li class="slide">
-          <img src="/images/testimonials1 4.png" alt="testimonial image 3" class="image-slide"/>
+          <img src="/images/testimonials1 4.png" alt="testimonial image 3" class="image-slide" />
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
