STAR-00 fixing minor issues of svg and styles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p class="hero-header-products__description2">Indulge in a scoop of ice cream made with passion and treat
               your taste buds to an unforgettable experience!</p>
             </li>
-            <img class="hero-header-products__flecha" src="./assets/images/arrow-right 3.png" alt="Flecha" width="26">
+            <img class="hero-header-products__flecha" src="./assets/images/arrow-right3.png" alt="Flecha" width="26">
           </div>
         </div>
       </div>
@@ -211,7 +211,8 @@
       <input type="radio" name="slites" id="radio3" />
       <ul class="section--reviews__slides">
         <li class="section--reviews__slide">
-          <img src="/images/testimonials1 1.png" alt="testimonial image 1" class="image-slide" />
+          <img src="assets/images/testimonials11.png" alt="testimonial image 1" class="image-slide" />
+
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
@@ -220,7 +221,7 @@
           <h2>Emily, Los Angeles</h2>
         </li>
         <li class="slide">
-          <img src="/images/testimonials1 3.png" alt="testimonial image 2" class="image-slide" />
+          <img src="assets/images/testimonials13.png" alt="testimonial image 2" class="image-slide" />
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
@@ -229,13 +230,12 @@
           <h2>Mila, New York City</h2>
         </li>
         <li class="slide">
-          <img src="/images/testimonials1 4.png" alt="testimonial image 3" class="image-slide" />
+          <img src="assets/images/testimonials14.png" alt="testimonial image 3" class="image-slide" />
           <p>
             <span class="comillas">❞ </span>I love visiting your café. You
             prepare the most delicious ice cream in Los Angeles! In addition,
             you have beautiful serving, cozy atmosphere and polite staff.
           </p>
-
           <h2>Agata, California</h2>
         </li>
       </ul>
